--- a/css/styles.css
+++ b/css/styles.css
@@ -150,9 +150,28 @@ html, body {
 
 .edu-blurb {
   padding-left: 5%;
-  font-size: 1.25vw;
+  font-size: 1.1vw;
 }
 
+.about-table {
+  padding: 0 2% 0 2%;
+}
+
+.skills-title {
+  color: #394A59;
+  font-size: 2.5vw;
+  padding-left: 0;
+  padding-top: 2%;
+  font-weight: 600;
+}
+
+.skills {
+  font-size: 2vw;
+}
+
+.skills-blurb {
+  font-size: 1.1vw;
+}
 
 /* Portfolio Section */
 
@@ -235,11 +254,12 @@ html, body {
 
 
 
-/*************** Writing Portfolio Styles *****************/
+/*************** Portfolio Page Styles *****************/
 
 .page-header {
   background-color: #7393B3;
   height: 9vw;
+  margin-bottom: 5%;
 }
 
 .page-title {
@@ -247,4 +267,28 @@ html, body {
   font-family: 'Open Sans', sans-serif;
   padding: 2% 0 0 5%;
   font-size: 5vw;
+}
+
+
+.port-row {
+  padding: 0 5% 0 5%;
+}
+
+.card {
+  width: 300px;
+}
+
+.port-col {
+  padding-bottom: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.card-ref {
+  color: #000000;
+}
+
+.card-ref:hover {
+  text-decoration: none;
+  color: #000000;
 }
