--- a/css/styles.css
+++ b/css/styles.css
@@ -271,17 +271,18 @@ html, body {
 
 
 .port-row {
-  padding: 0 5% 0 5%;
+  padding: 0 10% 0 10%;
 }
 
 .card {
-  width: 300px;
+  width: 100%;
+  height: 100%;
 }
 
 .port-col {
   padding-bottom: 50px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .card-ref {
