--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,10 @@
     z-index: 3;
   }
 
+  .menu-list-top {
+    display: inline;
+  }
+
 }
 
 /** Larger Screen **/
@@ -70,6 +74,9 @@
     padding-top: 20px;
   }
 
+  .menu-list-top {
+    display: none;
+  }
 }
 
 
@@ -167,8 +174,22 @@ html, body {
   top: 320px;
 }
 
+.menu-list-top {
+  list-style: none;
+  position: absolute;
+  color: #fff;
+  right: 20px;
+  top: 130px;
+}
+
 .menu-item {
-  padding: 2% 0;
+ padding-top: 10px;
+ padding-left: -10px; 
+}
+
+.menu-item-top { 
+ display: inline-block;
+ padding-left: 10px;
 }
 
 .menu-link {
@@ -176,7 +197,17 @@ html, body {
   font-size: 1.6em;
 }
 
+.menu-link-top {
+  color: rgba(255,255,255,.75);
+  font-size: 1.4em;
+}
+
 .menu-link:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+.menu-link-top:hover {
   color: #fff;
   text-decoration: none;
 }
@@ -190,9 +221,9 @@ html, body {
 }
 
 .social-div-top {
-  position: fixed;
-  bottom: 10px;
-  left: 245px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .social-link {
@@ -205,6 +236,11 @@ html, body {
 
 .social-logo {
   font-size: 3.4em;
+  width: 1em;
+}
+
+.social-logo-top {
+  font-size: 3em;
   width: 1em;
 }
 
