--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@ html, body {
   background-color: var(--blueback);
   height: 200px;
   width: 100%;
+  z-index: -2;
 }
 
 
@@ -207,6 +208,12 @@ html, body {
 .menu-link-top {
   color: rgba(255,255,255,.75);
   font-size: 1.4em;
+  border: none;
+  background: none;
+}
+
+.menu-link-top:focus {
+  outline: none;
 }
 
 .menu-link:hover {
@@ -249,6 +256,7 @@ html, body {
 .social-logo-top {
   font-size: 3em;
   width: 1em;
+  z-index: -1;
 }
 
 /**** Main Page ****/
@@ -256,6 +264,7 @@ html, body {
 .main-sec {
   background: #fff;
   height: 100vh;
+  width: 100%;
 }
 
 .main-title {
@@ -431,42 +440,3 @@ html, body {
   padding-top: 20px;
 }
 
-/*************** Portfolio Page Styles *****************/
-
-.page-header {
-  background-color: #7393B3;
-  height: 9vw;
-  margin-bottom: 5%;
-}
-
-.page-title {
-  color: #fff;
-  font-family: 'Open Sans', sans-serif;
-  padding: 2% 0 0 5%;
-  font-size: 5vw;
-}
-
-
-.port-row {
-  padding: 0 10% 0 10%;
-}
-
-.card {
-  width: 100%;
-  height: 100%;
-}
-
-.port-col {
-  padding-bottom: 50px;
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.card-ref {
-  color: #000000;
-}
-
-.card-ref:hover {
-  text-decoration: none;
-  color: #000000;
-}
